[package]
name = "eversender-docs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
solana-client = "2.3.6"
solana-sdk = "2.3.1"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "net", "time", "io-util"] }
quinn = "0.11.3"
rustls = { version = "0.23.15", default-features = false }
bincode = "1.3.3"
solana-tls-utils = "2.3.1"
